<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="76dp"
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="33sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="22dp"
        android:orientation="vertical">

     <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/login_edit_type1"
         android:layout_width="320dp"
         android:layout_height="50dp">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/term_text"
            android:textColor="@color/black"
            android:text="@string/login_text_term"
            android:textSize="20sp"/>
        <TextView
            android:gravity="center_vertical"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:id="@+id/term_edit"
            android:textColor="@color/login_edit"
            android:text="@string/login_edit_term"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/login_edit_type3">
        <TextView
            android:id="@+id/id_text"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/login_text_id"/>

        <EditText
            android:background="@null"
            android:id="@+id/id_edit"
            android:gravity="center_vertical"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/login_edit"
            android:hint="@string/login_edit_id"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/login_edit_type2"
        android:textSize="20dp">
        <TextView
            android:id="@+id/password_text"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:text="@string/login_text_password"
            android:textSize="20dp"/>
        <EditText
            android:background="@null"
            android:id="@+id/password_edit"
            android:gravity="center_vertical"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/login_edit"
            android:hint="@string/login_edit_password"
            android:password="true"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:background="@drawable/check_code_view">
            <EditText
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:id="@+id/checkEditText"
                android:hint="请输入验证码"
                android:maxLength="4"
                android:textColorHint="@color/login_edit"
                android:textColor="@color/black"
                android:textSize="15dp"/>
            <comm.example.administrator.studentamagementsystem.CheckView
                android:layout_marginLeft="15dp"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:id="@+id/checkCodeView"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
        <TextView
            android:background="@drawable/check_code_view"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="换一张"
            android:textColor="@color/black"
            android:id="@+id/changeCodeText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioGroup
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/identityGroup"
    android:orientation="horizontal"
        android:layout_marginLeft="45dp">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/studentRadio"
        android:text="@string/student"
        android:textColor="@color/login_text"
        android:textSize="20sp" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacherRadio"
        android:text="@string/teacher"
        android:textColor="@color/login_text"
        android:textSize="20sp"
        />
    </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="记住密码"
                android:layout_marginTop="22dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="20dp"
        android:background="@drawable/log_button"
        android:layout_marginLeft="42dp"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:text="@string/login_button"
        android:textSize="20dp"
        android:textColor="@color/login_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/log_button"
        android:layout_marginLeft="42dp"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:text="@string/register_button"
        android:textSize="20dp"
        android:textColor="@color/login_button" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/modify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码?"
            android:layout_marginTop="5dp"
            android:textColor="#2828ff"
            android:textSize="18dp"
            android:layout_marginLeft="260dp"/>
    </LinearLayout>
</LinearLayout>
